// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component should render direction up 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  dropDirection="up"
  itemCount={10}
  itemsEnd={10}
  itemsStart={1}
  lastPage={1}
  onSetPerPage={[Function]}
  page={1}
  perPage={10}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render empty page 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={0}
  itemsEnd={0}
  itemsStart={0}
  lastPage={1}
  onSetPerPage={[Function]}
  page={1}
  perPage={10}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render items per page 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={10}
  itemsEnd={10}
  itemsStart={1}
  lastPage={1}
  onSetPerPage={[Function]}
  page={1}
  perPage={20}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render page last 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={30}
  itemsEnd={30}
  itemsStart={21}
  lastPage={3}
  onSetPerPage={[Function]}
  page={3}
  perPage={10}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render page second 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={30}
  itemsEnd={20}
  itemsStart={11}
  lastPage={3}
  onSetPerPage={[Function]}
  page={2}
  perPage={10}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render per page options 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={10}
  itemsEnd={1}
  itemsStart={1}
  lastPage={10}
  onSetPerPage={[Function]}
  page={1}
  perPage={1}
  perPageOptions={
    Array [
      Object {
        "title": 1,
        "value": 1,
      },
      Object {
        "title": 2,
        "value": 2,
      },
    ]
  }
  setPage={[Function]}
/>
`;

exports[`Pagination component should render required props 1`] = `
<PaginationNext
  className="ins-c-pagination-next"
  itemCount={10}
  itemsEnd={10}
  itemsStart={1}
  lastPage={1}
  onSetPerPage={[Function]}
  page={1}
  perPage={10}
  perPageOptions={
    Array [
      Object {
        "title": 10,
        "value": 10,
      },
      Object {
        "title": 15,
        "value": 15,
      },
      Object {
        "title": 20,
        "value": 20,
      },
      Object {
        "title": 25,
        "value": 25,
      },
      Object {
        "title": 50,
        "value": 50,
      },
    ]
  }
  setPage={[Function]}
/>
`;
